src/components/Modal/style.css
.main-container {
    background-color: rgb(46 56 77 / 50%);
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display: flex;
    position: absolute;
    box-shadow: 24px;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.title-heading {
    color: var(--Black, #333);
    /* text-align: center; */

    /* Heading 2 */
    font-family: Open Sans;
    font-size: 32px;
    font-style: normal;
    font-weight: 800;
 
    /* 150% */
    letter-spacing: -2.24px;
    text-transform: capitalize;
    align-self: stretch;
}

.title-client{
    color: var(--Black, #333333);
    opacity: 0.8;

    /* Heading 2 */
    font-family: Open Sans;
    font-size: 24px;
    font-style: normal;
    font-weight: 800;
 
    /* 150% */
    letter-spacing: -2.24px;
    text-transform: capitalize;
    align-self: stretch;
}


.link_porto{
    color: #4E96E1;
    opacity: 0.9;

    /* Heading 2 */
    font-family: Open Sans;
    font-size: 16px;
    font-style: normal;
    font-weight: 600;
   
    /* 150% */
    letter-spacing: -1px;
    text-transform: capitalize;
    align-self: stretch;
}
.title-category{
    color: var(--Black, #333333);
    opacity: 0.8;

    /* Heading 2 */
    font-family: Open Sans;
    font-size: 16px;
    font-style: normal;
    font-weight: 600;
   
    /* 150% */
    letter-spacing: -1px;
    text-transform: capitalize;
    align-self: stretch;
}

.desc {
    align-self: stretch;
    color: var(--Black-80, rgba(51, 51, 51, 0.80));
    font-family: Open Sans;
    font-size: 16px;
    font-style: normal;
    margin: 0;
    font-weight: 600;
    line-height: auto;
    letter-spacing: -1.12px;
}
.description {
    align-self: stretch;
    color: var(--Black, rgba(51, 51, 51, 1));
    font-family: Open Sans;
    font-size: 16px;
    font-style: normal;
    margin: 0;
    font-weight: 600;
    line-height: auto;
    letter-spacing: -1.12px;
}

.title-desc {
    align-self: stretch;
    color: var(--Black, #333);
    margin: 0;
    font-family: Open Sans;
    font-size: 16px;
    font-style: normal;
    font-weight: 600;
    line-height: auto;

    letter-spacing: -1px;
    text-transform: capitalize;
}

.modal-container {
    display: flex;
    flex-direction: column;
    max-height: 80vh;
    overflow-y: scroll;
    pointer-events: auto;
    position: fixed;
    background-color: #ffffff;
    box-sizing: border-box;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    border-radius: 24px;
    /* background: #FFF; */
    outline: 0;
    margin: 0px auto;
    scrollbar-width: thin; /* Untuk Firefox */
    scrollbar-gutter: 20px; /* Hanya berlaku di Firefox */
    scrollbar-color: #555 #ddd; /* Hanya berlaku di Firefox */
    scroll-behavior: smooth;
}


.modal-container::-webkit-scrollbar-track
{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	/* background-color: #F5F5F5; */
}

.modal-container::-webkit-scrollbar
{
	width: 10px;
	/* background-color: #F5F5F5; */
}

.modal-container::-webkit-scrollbar-thumb
{
	background-color: #000000;
	border: 2px solid #555555;
}


.content-tech{
    justify-content: center;
    gap: 80px;
    height: 224px;
    display: flex;
    align-items: center;
}
.modal-body {
    display: flex;
    padding: 16px 24px;
    width: 800px;
    margin: 0;
    flex-direction: column;
    gap: 64px;
    flex-grow: 1;
    /* Memastikan elemen tetap di tengah */
}

.content-modal {
    display: flex;
    width: 100%;
    flex-direction: column;
    
    justify-content: start;
    gap: 32px;
    align-self: stretch;
}

.envi-porto { 
    padding: 32px 24px;
    width: 800px;
    flex-direction: column;
    align-items: flex-start;
    gap: 16px;
    align-self: stretch;
    background: var(--Blue-1-20, rgba(78, 150, 225, 0.20));
}


.content-spec {
    padding: 32px;
    gap: 32px;
    display: flex;
    flex-direction: column;
    border-radius: 24px;
    background: #FFF;

    /* nano Drop Shadow */
    box-shadow: 0px 6px 60px 0px rgba(51, 51, 51, 0.06);
    width: 100%;
}

.modal-image {
    width: 100%;
    object-fit: cover;
}

.modal-container::-webkit-scrollbar {
    width: 8px;
    /* Lebar scrollbar */
}

.modal-container::-webkit-scrollbar-thumb {
    background-color: #555;
    /* Warna thumb scrollbar */
    border-radius: 4px;
    /* Sudut thumb scrollbar */
}

.modal-container::-webkit-scrollbar-thumb:hover {
    background-color: #888;
    /* Warna thumb scrollbar saat hover */
}

.modal-text {
    align-self: stretch;
    color: var(--Black-80, rgba(51, 51, 51, 0.80));

    font-family: Open Sans;
    font-size: 16px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    letter-spacing: -1.12px;

}

.modal-image {
    width: 100%;
    height: auto;
    border-radius: 48px;
    display: flex;
    object-fit: cover;
    margin: 0px auto;
}

/* mobile responsive */
@media (min-width: 100px) and (max-width:768px) {
    .modal-container {
        width: 90%;
        /* Ubah lebar modal menjadi lebih kecil */
    }
    .content-tech{
        justify-content: center;
        gap: 28px;
        height: 100%;
        display: flex;
        align-items: center;
    }
    .modal-body {
        width: 100%;
        gap: 10px;
        /* Gunakan lebar penuh pada layar kecil */
    }
    .title-client{
        font-size: 20px;
    }
    .title-category{
        font-size: 14px;
    }
    .title-heading{
        font-size: 36px;
    }
    .desc,
    .description,
    .link_porto,
    .title-desc {
        font-size: 14px;
    }

    .modal-image {
        width: 100%;
        height: auto;
        border-radius: 8px;
        object-fit: cover;
        /* Gunakan lebar penuh pada gambar */
        /* max-width: none; */
    }
    .envi-porto { 
        padding: 32px 24px;
        width: 100%;
        flex-direction: column;
        align-items: flex-start;
        gap: 16px;
        align-self: stretch;
        background: var(--Blue-1-20, rgba(78, 150, 225, 0.20));
    }
    .content-modal{
        gap: 16px;
    }
}

/* tab responsive */
@media (min-width: 768px) and (max-width:968px) {
    .modal-container {
        width: 90%;
        /* Ubah lebar modal menjadi lebih kecil */
    }

    .modal-body {
        width: 100%;
        gap: 40px;
        /* Gunakan lebar penuh pada layar kecil */
    }
    .content-tech{
        justify-content: center;
        gap: 28px;
        height: 100%;
        display: flex;
        align-items: center;
    }
    .content-modal{
        gap: 16px;
    }
    .modal-image {
        width: 100%;
        height: auto;
        object-fit: cover;
        max-width: none;
    }
    .title-client{
        font-size: 20px;
    }
    .title-category{
        font-size: 14px;
    }
    .title-heading{
        font-size: 36px;
    }
    .desc,
    .title-desc {
        font-size: 14px;
    }
}

